--- a/src/kx/lkkx.html
+++ b/src/kx/lkkx.html
@@ -68,8 +68,6 @@
         var select = document.getElementById('type')
         
         function myFunction() {
-            console.log(select.value)
-            console.log(document.querySelector('.lbl-date-form').value)
             if (select.value === 'name')
             {
                 document.getElementById('datestart').style.display = 'none'
@@ -139,6 +137,8 @@
         }
         function processName() {
             var name = document.getElementById('nameinp').value;
+            name = $.trim(name);
+
             nhaps = ipcRenderer.sendSync('doc-nhap-linhkien-ten', {name});
             xuats = ipcRenderer.sendSync('doc-xuat-linhkien-ten', {name});
             tons = ipcRenderer.sendSync('doc-ton-linhkien', {name});
