--- a/src/xuat/chinhsua/cstp.html
+++ b/src/xuat/chinhsua/cstp.html
@@ -70,8 +70,6 @@
         var select = document.getElementById('type')
         
         function myFunction() {
-            console.log(select.value)
-            console.log(document.querySelector('.lbl-date-form').value)
             if (select.value === 'name')
             {
                 document.getElementById('datestart').style.display = 'none'
@@ -156,6 +154,8 @@
         }
         function processName() {
             var name = document.getElementById('nameinp').value;
+            name = $.trim(name);
+
             docs = ipcRenderer.sendSync('doc-xuat-thanhpham-ten', {name});
             print();
             return false;
