New Update: Autocomplete input

--- a/src/xuat/lkxuat.html
+++ b/src/xuat/lkxuat.html
@@ -15,6 +15,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap"
         rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="https://kraaden.github.io/autocomplete/autocomplete.css">
     <title>Tax</title>
 </head>
 <body>
@@ -72,6 +73,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
+    <script src="../scripts/keywordsLinhkien.js"></script>
     <script>
         var thanhtien = document.getElementById('thanhtien').value;
         var formChange = document.querySelector('form')
