--- a/src/index.html
+++ b/src/index.html
@@ -68,8 +68,8 @@
             <div class="col-4">
                 <div style="background-color: #1f4775; border-radius: 2%; width: 300px; height: 300px; flex-direction: column; display: flex; margin-left: auto; margin-right: auto;">
                     <h1 style="text-align: center; color: white; margin-top: 20px;">Chỉnh sửa</h1>
-                    <a href="nhap/chinhsua/cslk.html" style="margin-left: 25px; color: white; font-size: 30px; margin-top: 60px;">Linh kiện điện tử</a>
-                    <a href="nhap/chinhsua/cstp.html" style="margin-left: 25px; color: white; font-size: 30px; margin-top: 25px;">Thành phẩm</a>
+                    <a href="chinhsua/cslk.html" style="margin-left: 25px; color: white; font-size: 30px; margin-top: 60px;">Linh kiện điện tử</a>
+                    <a href="chinhsua/cstp.html" style="margin-left: 25px; color: white; font-size: 30px; margin-top: 25px;">Thành phẩm</a>
                 </div>
             </div>
 
