--- a/src/chinhsua/cstp.html
+++ b/src/chinhsua/cstp.html
@@ -54,7 +54,14 @@
 
         <div class="col-12" id="nhap" style="border-right: 1px solid black;">
             <h1 style="text-align: center;">Chỉnh sửa thành phẩm</h1>
-            
+            <div class="row" style="margin-top: 50px;">
+                <div class="col-6" style="text-align: center; border-right: 1px black solid;">
+                    <h3>Nhập</h3>
+                </div>
+                <div class="col-6" style="text-align: center;">
+                    <h3>Xuất</h3>
+                </div>
+            </div>
         </div>
 
         
