--- a/src/index.html
+++ b/src/index.html
@@ -72,6 +72,12 @@
                     <a href="chinhsua/cstp.html" style="margin-left: 25px; color: white; font-size: 30px; margin-top: 25px;">Thành phẩm</a>
                 </div>
             </div>
+            <div class="col-4">
+                <div style="background-color: #6f751f; border-radius: 2%; width: 300px; height: 300px; flex-direction: column; display: flex; margin-left: auto; margin-right: auto;">
+                    <h1 style="text-align: center; color: white; margin-top: 20px;">Nhập excel</h1>
+                    <a href="addExcel/addExcel.html" style="margin-left: 25px; color: white; font-size: 30px; margin-top: 60px;">Keyword</a>
+                </div>
+            </div>
 
         </div>
 
