Super Update: Save keywords via firestore; Add excel keywords; allow ketxuat ton; can see log-nhap, log-xuat in cslk, cstp pages

--- a/src/addExcel/addExcel.html
+++ b/src/addExcel/addExcel.html
@@ -39,10 +39,14 @@
     <div style="margin-top: 100px; display: flex; justify-content: center; align-items: center; flex-direction: column;">
         <h1>Nhập file keyword</h1>
         <form action="" style="margin-top: 50px;">
-            <input type="file" name="" id="" placeholder="File excel">
+            <input type="file" name="" id="excel" placeholder="File excel">
         </form>
     </div>
 
+    <!-- Insert this line after script imports -->
+    <script>if (window.module) module = window.module;</script>
+
+    <script src="../scripts/addExcelKeywords.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
@@ -52,5 +56,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+
+    <!-- Insert this line after script imports -->
+    <script>if (window.module) module = window.module;</script>
 </body>
 </html>
