--- a/src/kx/lkkx.html
+++ b/src/kx/lkkx.html
@@ -148,7 +148,7 @@
             return false;
         }
         function exportExcel() {
-            ipcRenderer.send('excel-linhkien', [nhaps, xuats]);
+            ipcRenderer.send('excel-linhkien', [nhaps, xuats, tons]);
         }
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
