--- a/src/xuat/tpxuat.html
+++ b/src/xuat/tpxuat.html
@@ -137,7 +137,7 @@
             if (form.id == "edit") {
                 obj.id = document.getElementById('_id').value;
                 var canSubmit = ipcRenderer.sendSync('edit-xuat-thanhpham', obj);
-                if (canSubmit) { form.action = "./chinhsua/cstp.html"; form.submit(); }
+                if (canSubmit) { form.action = "../chinhsua/cstp.html"; form.submit(); }
             }
         }
     </script>
