--- a/src/chinhsua/cstp.html
+++ b/src/chinhsua/cstp.html
@@ -62,13 +62,13 @@
     <div class="row main-row">
         
 
-        <div class="col-12" id="nhap" style="border-right: 1px solid black;">
+        <div class="col-12" style="border-right: 1px solid black;">
             <h1 style="text-align: center;">Chỉnh sửa thành phẩm</h1>
             <div class="row" style="margin-top: 50px;">
-                <div class="col-6" style="text-align: center; border-right: 1px black solid;">
+                <div class="col-6" id="nhap" style="text-align: center; border-right: 1px black solid;">
                     <h3>Nhập</h3>
                 </div>
-                <div class="col-6" style="text-align: center;">
+                <div class="col-6" id="xuat" style="text-align: center;">
                     <h3>Xuất</h3>
                 </div>
             </div>
@@ -123,9 +123,9 @@
         const {ipcRenderer} = require('electron');
         var docs;
 
-        function print() {
-            var box = $('#nhap');
-            $('#nhap div').remove();
+        function print(state) {
+            var box = $(`#${state}`);
+            $(`#${state} div`).remove();
             docs.forEach(doc => {
                 var block = $('<div style="border: 1px solid black; padding-left: 15px; padding-top: 15px;"></div>')
                 var tenhang = $('<p></p>').html('Tên hàng: ' + doc.tenhang);
@@ -156,7 +156,9 @@
         function processAll() {
             if (select.value == 'all') {
                 docs = ipcRenderer.sendSync('doc-nhap-thanhpham-all', {});
-                print();
+                print('nhap');
+                docs = ipcRenderer.sendSync('doc-xuat-thanhpham-all', {});
+                print('xuat');
             }
         }
 
@@ -166,7 +168,9 @@
             var dateend = document.getElementById('dateend').value;
             if (datestart != '' && dateend != '') {
                 docs = ipcRenderer.sendSync('doc-nhap-thanhpham-ngay', {datestart, dateend});
-                print();
+                print('nhap');
+                docs = ipcRenderer.sendSync('doc-xuat-thanhpham-ngay', {datestart, dateend});
+                print('xuat');
             }
         }
         function processName() {
@@ -174,7 +178,9 @@
             name = $.trim(name);
 
             docs = ipcRenderer.sendSync('doc-nhap-thanhpham-ten', {name});
-            print();
+            print('nhap');
+            docs = ipcRenderer.sendSync('doc-xuat-thanhpham-ten', {name});
+            print('xuat');
             return false;
         }
     </script>
