--- a/src/xuat/lkxuat.html
+++ b/src/xuat/lkxuat.html
@@ -179,7 +179,7 @@
             if (form.id == "edit") {
                 obj.id = document.getElementById('_id').value;
                 var canSubmit = ipcRenderer.sendSync('edit-xuat-linhkien', obj);
-                if (canSubmit) { form.action = "./chinhsua/cslk.html"; form.submit(); }
+                if (canSubmit) { form.action = "../chinhsua/cslk.html"; form.submit(); }
             }
         }
     </script>
