--- a/src/chinhsua/cslk.html
+++ b/src/chinhsua/cslk.html
@@ -130,7 +130,7 @@
             var box = $(`#${state}`);
             $(`#${state} div`).remove();
             docs.forEach(doc => {
-                var block = $('<div style="border: 1px solid black; padding-left: 15px; padding-top: 15px;"></div>')
+                var block = $('<div style="border: 1px solid black; padding-left: 15px; padding-top: 15px; position: relative"></div>')
                 var tenhang = $('<p></p>').html('Tên hàng: ' + doc.tenhang);
                 var partnum = $('<p></p>').html('Mã: ' + doc.partnum);
                 var sohopdong = $('<p></p>').html('Số hợp đồng: ' + doc.sohopdong);
@@ -142,8 +142,8 @@
                 var dongia = $('<p></p>').html('Đơn giá: ' + doc.dongia);
                 var thanhtien = $('<p></p>').html('Thành tiền: ' + doc.thanhtien);
 
-                var button = $(`<button onclick="redirect('${doc.id}')" style="position: absolute; right: 0; background-color: transparent;"><i class="far fa-edit"></i></button>`);
-                var butto = $(`<button onclick="redirect1('${doc.id}')" style="position: absolute; right: 30px; margin-right:30px; background-color: transparent;"><i class="far fa-trash-alt"></i></button>`);
+                var button = $(`<button onclick="redirect('${doc.id}')" style="position: absolute; bottom:30px; right: 0; background-color: transparent;"><i class="far fa-edit"></i></button>`);
+                var butto = $(`<button onclick="redirect1('${doc.id}')" style="position: absolute; bottom:30px; right: 30px; margin-right:30px; background-color: transparent;"><i class="far fa-trash-alt"></i></button>`);
 
                 block.append(butto, button, tenhang, partnum, sohopdong, sanpham, cty, date, dvtinh, quantity, dongia, thanhtien);
                 box.append(block);
