--- a/src/chinhsua/cslk.html
+++ b/src/chinhsua/cslk.html
@@ -67,11 +67,11 @@
             <h1 style="text-align: center;">Chỉnh sửa linh kiện điện tử</h1>
 
             <div class="row" style="margin-top: 50px;">
-                <div id="nhap" class="col-6" style="text-align: center; border-right: 1px black solid;">
-                    <h3>Nhập</h3>
+                <div id="nhap" class="col-6" style="border-right: 1px black solid;">
+                    <h3 style="text-align: center;">Nhập</h3>
                 </div>
-                <div id="xuat" class="col-6" style="text-align: center;">
-                    <h3>Xuất</h3>
+                <div id="xuat" class="col-6">
+                    <h3 style="text-align: center;">Xuất</h3>
                 </div>
             </div>
 
