--- a/src/kx/lkkx.html
+++ b/src/kx/lkkx.html
@@ -60,13 +60,12 @@
 
         </div>
 
-        <!-- <div class="col-6" id="xuat">
-            <h1 style="text-align: center;">Xuất</h1>
-        </div> -->
-
         <button onclick="exportExcel()" style="display: flex; margin-left: auto; margin-right: auto; align-items: center; justify-content: center; margin-top: 50px; height: 50px; width: 250px; text-align: center; background-color: rgb(49, 197, 49);">Xuất file excel</button>
 
-
+        <div id="sheet-buttons">
+        </div>
+        <div class="col-12" id="grid" style="visibility: hidden;">
+        </div>
     </div>
 
     <!-- Insert this line above script imports  -->
@@ -75,7 +74,9 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/canvas-datagrid"></script>
     <script src="../scripts/keywordsName.js"></script>
+    <script src="../scripts/printExcel.js"></script>
     <script>
         var select = document.getElementById('type')
         
@@ -158,7 +159,8 @@
             return false;
         }
         function exportExcel() {
-            ipcRenderer.send('excel-linhkien', [nhaps, xuats, tons]);
+            printExcel(nhaps, xuats, tons, 'Linhkien'); //Print datas as an excel file on the program
+            ipcRenderer.send('excel-linhkien', [nhaps, xuats, tons]); //Parsing data into an excel file 
         }
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
