--- a/src/chinhsua/cslk.html
+++ b/src/chinhsua/cslk.html
@@ -142,7 +142,9 @@
                 var dongia = $('<p></p>').html('Đơn giá: ' + doc.dongia);
                 var thanhtien = $('<p></p>').html('Thành tiền: ' + doc.thanhtien);
 
-                var button = $(`<button onclick="redirect('${doc.id}')" style="position: absolute; bottom:30px; right: 0; background-color: transparent;"><i class="far fa-edit"></i></button>`);
+                var button;
+                if (state == 'nhap') button = $(`<button onclick="redirect('${doc.id}')" style="position: absolute; bottom:30px; right: 0; background-color: transparent;"><i class="far fa-edit"></i></button>`);
+                if (state == 'xuat') button = $(`<button onclick="redirect2('${doc.id}')" style="position: absolute; bottom:30px; right: 0; background-color: transparent;"><i class="far fa-edit"></i></button>`);
                 var butto = $(`<button onclick="redirect1('${doc.id}')" style="position: absolute; bottom:30px; right: 30px; margin-right:30px; background-color: transparent;"><i class="far fa-trash-alt"></i></button>`);
 
                 block.append(butto, button, tenhang, partnum, sohopdong, sanpham, cty, date, dvtinh, quantity, dongia, thanhtien);
@@ -158,6 +160,10 @@
         function redirect1(id) {
             ipcRenderer.send('xoa-nhap-linhkien', id);
             location.href='./cslk.html';
+        }
+        function redirect2(id) {
+            ipcRenderer.send('edit-send', {type: 'linhkien', id: id});
+            location.href='../xuat/lkxuat.html';
         }
 
         // Option All
