--- a/src/chinhsua/cstp.html
+++ b/src/chinhsua/cstp.html
@@ -134,7 +134,10 @@
                 var chip = $('<p></p>').html('Chip: ' + doc.chip);
                 var date = $('<p></p>').html('Ngày nhập: ' + doc.date);
                 var quantity = $('<p></p>').html('Số lượng: ' + doc.quantity);
-                var button = $(`<button onclick="redirect('${doc.id}')" style="position: absolute; right: 0; background-color: transparent;"><i class="far fa-edit"></i></button>`);
+
+                var button;
+                if (state == 'nhap') button = $(`<button onclick="redirect('${doc.id}')" style="position: absolute; right: 0; background-color: transparent;"><i class="far fa-edit"></i></button>`);
+                if (state == 'xuat') button = $(`<button onclick="redirect2('${doc.id}')" style="position: absolute; right: 0; background-color: transparent;"><i class="far fa-edit"></i></button>`);
                 var butto = $(`<button onclick="redirect1('${doc.id}')" style="position: absolute; right: 30px; margin-right:30px; background-color: transparent;"><i class="far fa-trash-alt"></i></button>`);
 
                 block.append(butto, button, tenhang, mcu, sohopdong, chip, date, quantity);
@@ -150,6 +153,10 @@
         function redirect1(id) {
             ipcRenderer.send('xoa-nhap-thanhpham', id);
             location.href='./cstp.html';
+        }
+        function redirect2(id) {
+            ipcRenderer.send('edit-send', {type: 'thanhpham', id: id});
+            location.href='../xuat/tpxuat.html';
         }
 
         // Option All
