--- a/src/nhap/lknhap.html
+++ b/src/nhap/lknhap.html
@@ -40,6 +40,8 @@
     <div class="container">
         <h1>Nhập linh kiện thành phẩm</h1>
         <form id="save" action="" class="form-group" onsubmit="return process()">
+            <input type="hidden" id="submissionDate" value="not added yet">
+
             <label for="partnum">Part number</label>
             <input type="text" class="form-control" id="partnum" placeholder="Part number" required>
             
@@ -116,10 +118,12 @@
             var dvtinh = document.getElementById('dvtinh').value;
             var quantity = document.getElementById('quantity').value;
             var dongia = document.getElementById('dongia').value;
+            var submissionDate = document.getElementById('submissionDate').value;
 
             if (dongia == "") dongia = "0";
             if (quantity == "") quantity = "0";
             if (thanhtien == "") thanhtien = "0";
+            if (submissionDate == "not added yet") submissionDate = new Date().toDateString();
             
             const obj = {
                 tenhang: tenhang,
@@ -132,6 +136,7 @@
                 quantity: parseInt(quantity, 10),
                 dongia: parseInt(dongia, 10),
                 thanhtien: parseInt(thanhtien, 10),
+                submissionDate: submissionDate,
                 state: 'nhap'
             }
             return obj;
@@ -144,6 +149,7 @@
             form.attr("id", 'edit');
             const formContent = $(`
                 <input type="hidden" id="_id" value="${doc.id}">
+                <input type="hidden" id="submissionDate" value="${doc.submissionDate}">
 
                 <label for="partnum">Part number</label>
                 <input type="text" class="form-control" id="partnum" placeholder="Part number" value="${doc.partnum}" required>
