--- a/src/xuat/tpxuat.html
+++ b/src/xuat/tpxuat.html
@@ -41,6 +41,8 @@
         <h1>Xuất thành phẩm</h1>
     
         <form id="save" action="" class="form-group">
+            <input type="hidden" id="submissionDate" value="not added yet">
+
             <label for="tensp">Tên sản phẩm</label>
             <input type="text" class="form-control" id="tenhang" placeholder="Tên sản phẩm">
             
@@ -63,7 +65,7 @@
 
         <div class="row" style="margin: 30px 0;">
             <input onclick="process()" type="submit" value="Thêm" class="col-6 form-control" style="line-height: 25px; font-size: 25px; background-color: green; color:white;">
-            <button class="col-6 form-control" onclick="location.href='xuat.html'" style="line-height: 25px; font-size: 25px; background-color: red; color:white;">Hủy</button>
+            <button class="col-6 form-control" onclick="location.href='../index.html'" style="line-height: 25px; font-size: 25px; background-color: red; color:white;">Hủy</button>
         </div>
 
         <div id="grid">
@@ -91,8 +93,10 @@
             var chip = document.getElementById('chip').value;
             var date = document.getElementById('date').value;
             var quantity = document.getElementById('quantity').value;
+            var submissionDate = document.getElementById('submissionDate').value;
 
             if (quantity == "") quantity = "0";
+            if (submissionDate == "not added yet") submissionDate = new Date().toDateString();
 
             const obj = {
                 tenhang: tenhang,
@@ -102,6 +106,7 @@
                 date: date,
                 dvtinh: 'none',
                 quantity: parseInt(quantity, 10),
+                submissionDate: submissionDate,
                 state: 'xuat'
             }
             return obj;
@@ -114,6 +119,7 @@
             form.attr("id", 'edit')
             const formContent = $(`
                 <input type="hidden" id="_id" value="${doc.id}">
+                <input type="hidden" id="submissionDate" value="${doc.submissionDate}">
 
                 <label for="tensp">Tên sản phẩm</label>
                 <input type="text" class="form-control" id="tenhang" placeholder="Tên sản phẩm" value="${doc.tenhang}">
@@ -141,6 +147,8 @@
             var obj = prepareObj();
             if (form.id == "save") {
                 var canSubmit = ipcRenderer.sendSync('xuat-thanhpham', obj);
+                console.log("Entered");
+                console.log(canSubmit);
                 if (canSubmit) form.submit();
             } 
             if (form.id == "edit") {
