update new stuff

--- a/src/xuat/tpxuat.html
+++ b/src/xuat/tpxuat.html
@@ -16,7 +16,7 @@
         href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap"
         rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="https://kraaden.github.io/autocomplete/autocomplete.css">
-    <title>Tax</title>
+    <title>Data Manager</title>
 </head>
 <body>
 
@@ -38,7 +38,7 @@
 
     </nav>
     <div class="container">
-        <h1>Xuất thành phẩm</h1>
+        <h1>Xuất thành phẩm <span style="font-size: 15px; float: right; margin-top: 15px;">Ngày thực nhập : 01/09/2018</span></h1>
     
         <form id="save" action="" class="form-group">
             <input type="hidden" id="submissionDate" value="not added yet">
