--- a/src/addExcel/addExcel.html
+++ b/src/addExcel/addExcel.html
@@ -15,7 +15,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap"
         rel="stylesheet" />
-    <title>Tax</title>
+    <title>Data Manager</title>
 </head>
 <body>
     <nav class="navbar navbar-light" style="padding: 0 !important;">
