--- a/src/chinhsua/cstp.html
+++ b/src/chinhsua/cstp.html
@@ -16,7 +16,7 @@
         href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap"
         rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="https://kraaden.github.io/autocomplete/autocomplete.css">
-    <title>Tax</title>
+    <title>Data Manager</title>
     <style>
         p {
             margin: 0 !important;
