--- a/src/xuat/tpxuat.html
+++ b/src/xuat/tpxuat.html
@@ -64,8 +64,9 @@
         </form>
 
         <div class="row" style="margin: 30px 0;">
-            <input onclick="process()" type="submit" value="Thêm" class="col-6 form-control" style="line-height: 25px; font-size: 25px; background-color: green; color:white;">
-            <button class="col-6 form-control" onclick="location.href='../index.html'" style="line-height: 25px; font-size: 25px; background-color: red; color:white;">Hủy</button>
+            <input onclick="submit()" type="submit" value="Thêm" class="col-4 form-control" style="line-height: 25px; font-size: 25px; background-color: green; color:white;">
+            <input onclick="addReview('thanhpham')" type="submit" value="Đợi" class="col-4 form-control" style="line-height: 25px; font-size: 25px; background-color: blue; color:white;">
+            <button class="col-4 form-control" onclick="location.href='../index.html'" style="line-height: 25px; font-size: 25px; background-color: red; color:white;">Hủy</button>
         </div>
 
         <div id="grid">
@@ -81,10 +82,11 @@
     <script src="../scripts/keywordsThanhpham.js"></script>
     <script src="https://unpkg.com/canvas-datagrid"></script>
     <script src="../scripts/printExcel.js"></script>
+    <script src="../scripts/reviews.js"></script>
     <script>
         const {ipcRenderer} = require('electron'); //Now it's able to send events between backend and frontend 
         // Print recent submissions when first enter the page
-        printRecentSubmissions('thanhpham', 'xuat');
+        printReviews('thanhpham', 'xuat');
 
         function prepareObj() {
             var tenhang = document.getElementById('tenhang').value;
@@ -142,19 +144,29 @@
             form.append(formContent);
         })
 
-        function process() {
+        function submit() {
             const form = document.querySelector('form');
-            var obj = prepareObj();
             if (form.id == "save") {
-                var canSubmit = ipcRenderer.sendSync('xuat-thanhpham', obj);
-                console.log("Entered");
-                console.log(canSubmit);
-                if (canSubmit) form.submit();
+                //Submit all previous reviews
+                var index = 0;
+                while (index < reviews['thanhpham'].length) { //Inside the array
+                    if (reviews['thanhpham'][index].state == 'xuat') {
+                        var canSubmit = ipcRenderer.sendSync('xuat-thanhpham', reviews['thanhpham'][index]);
+                        if (canSubmit) removeReview('thanhpham', index);
+                        else index++; //Skip element
+                    }
+                    else index++; //Skip element
+                }
+
+                location.reload(); //Page Reload
             } 
             if (form.id == "edit") {
+                var obj = prepareObj();
                 obj.id = document.getElementById('_id').value;
                 var canSubmit = ipcRenderer.sendSync('edit-xuat-thanhpham', obj);
-                if (canSubmit) { form.action = "../chinhsua/cstp.html"; form.submit(); }
+                if (canSubmit) { 
+                    form.action = "../chinhsua/cstp.html"; form.submit(); 
+                }
             }
         }
     </script>
