--- a/src/addExcel/removeKeyword.html
+++ b/src/addExcel/removeKeyword.html
@@ -36,11 +36,107 @@
 
     </nav>
         
-    <div style="margin-top: 100px; display: flex; justify-content: center; align-items: center; flex-direction: column;">
-        <h1>Nhập file keyword</h1>
-        <form action="" style="margin-top: 50px;">
-            <input type="file" name="" id="excel" placeholder="File excel">
-        </form>
+    <div class="container" style="margin-top: 50px;">
+        <h2 style="margin-bottom: 15px;">Part number</h2>
+        <ul style="border-bottom: 1px solid black; padding-bottom: 10px;">
+            <li style="margin-top: 5px;">
+                <div class="row">
+                    <p class="col-6" style="font-size: 20px;">Keyword 1</p>
+                    <div class="col-6">
+                        <button style="padding: 15px 20px; float: right;">Delete</button>
+                    </div>
+                </div>
+            </li>
+            <li style="margin-top: 5px;">
+                <div class="row">
+                    <p class="col-6" style="font-size: 20px;">Keyword 2</p>
+                    <div class="col-6">
+                        <button style="padding: 15px 20px; float: right;">Delete</button>
+                    </div>
+                </div>
+            </li>
+        </ul>
+
+
+        <h2 style="margin-bottom: 15px;">Tên hàng</h2>
+        <ul style="border-bottom: 1px solid black; padding-bottom: 10px;">
+            <li style="margin-top: 5px;">
+                <div class="row">
+                    <p class="col-6" style="font-size: 20px;">Keyword 1</p>
+                    <div class="col-6">
+                        <button style="padding: 15px 20px; float: right;">Delete</button>
+                    </div>
+                </div>
+            </li>
+            <li style="margin-top: 5px;">
+                <div class="row">
+                    <p class="col-6" style="font-size: 20px;">Keyword 2</p>
+                    <div class="col-6">
+                        <button style="padding: 15px 20px; float: right;">Delete</button>
+                    </div>
+                </div>
+            </li>
+        </ul>
+        
+        <h2 style="margin-bottom: 15px;">Số hợp đồng</h2>
+        <ul style="border-bottom: 1px solid black; padding-bottom: 10px;">
+            <li style="margin-top: 5px;">
+                <div class="row">
+                    <p class="col-6" style="font-size: 20px;">Keyword 1</p>
+                    <div class="col-6">
+                        <button style="padding: 15px 20px; float: right;">Delete</button>
+                    </div>
+                </div>
+            </li>
+            <li style="margin-top: 5px;">
+                <div class="row">
+                    <p class="col-6" style="font-size: 20px;">Keyword 2</p>
+                    <div class="col-6">
+                        <button style="padding: 15px 20px; float: right;">Delete</button>
+                    </div>
+                </div>
+            </li>
+        </ul>
+
+        <h2 style="margin-bottom: 15px;">Sản phẩm</h2>
+        <ul style="border-bottom: 1px solid black; padding-bottom: 10px;">
+            <li style="margin-top: 5px;">
+                <div class="row">
+                    <p class="col-6" style="font-size: 20px;">Keyword 1</p>
+                    <div class="col-6">
+                        <button style="padding: 15px 20px; float: right;">Delete</button>
+                    </div>
+                </div>
+            </li>
+            <li style="margin-top: 5px;">
+                <div class="row">
+                    <p class="col-6" style="font-size: 20px;">Keyword 2</p>
+                    <div class="col-6">
+                        <button style="padding: 15px 20px; float: right;">Delete</button>
+                    </div>
+                </div>
+            </li>
+        </ul>
+
+        <h2 style="margin-bottom: 15px;">Công ty nhập</h2>
+        <ul style="border-bottom: 1px solid black; padding-bottom: 10px;">
+            <li style="margin-top: 5px;">
+                <div class="row">
+                    <p class="col-6" style="font-size: 20px;">Keyword 1</p>
+                    <div class="col-6">
+                        <button style="padding: 15px 20px; float: right;">Delete</button>
+                    </div>
+                </div>
+            </li>
+            <li style="margin-top: 5px;">
+                <div class="row">
+                    <p class="col-6" style="font-size: 20px;">Keyword 2</p>
+                    <div class="col-6">
+                        <button style="padding: 15px 20px; float: right;">Delete</button>
+                    </div>
+                </div>
+            </li>
+        </ul>
     </div>
 
     <!-- Insert this line after script imports -->
