--- a/src/nhap/lknhap.html
+++ b/src/nhap/lknhap.html
@@ -84,15 +84,15 @@
         </form>
 
         <div class="row" style="margin: 30px 0;">
-            <input onclick="submit()" type="submit" value="Thêm" class="col-4 form-control" style="line-height: 25px; font-size: 25px; background-color: green; color:white;">
-            <input onclick="addReview('linhkien')" type="submit" value="Đợi" class="col-4 form-control" style="line-height: 25px; font-size: 25px; background-color: blue; color:white;">
-            <button class="col-4 form-control" onclick="location.href='../index.html'" style="line-height: 25px; font-size: 25px; background-color: red; color:white;">Hủy</button>
+            <input onclick="addReview('linhkien')" type="submit" value="Đợi" class="col-6 form-control" style="line-height: 25px; font-size: 25px; background-color: blue; color:white;">
+            <button class="col-6 form-control" onclick="location.href='../index.html'" style="line-height: 25px; font-size: 25px; background-color: red; color:white;">Hủy</button>
         </div>
 
         <div id="grid">
 
         </div>
-        
+        <input onclick="submit()" type="submit" value="Thêm" class="form-control" style="line-height: 25px; font-size: 25px; background-color: green; color:white;">
+            
     </div>
 
     <p id="hehe" style="font-size: 50px;"></p>
