--- a/src/xuat/lkxuat.html
+++ b/src/xuat/lkxuat.html
@@ -211,10 +211,7 @@
                 while (index < reviews['linhkien'].length) { //Inside the array
                     if (reviews['linhkien'][index].state == 'xuat') {
                         var canSubmit = ipcRenderer.sendSync('xuat-linhkien', reviews['linhkien'][index]);
-                        if (canSubmit) {
-                            submissionCount = Number(submissionCount) + 1;
-                            removeReview('linhkien', index);
-                        }
+                        if (canSubmit) removeReview('linhkien', index);
                         else index++; //Skip element
                     }
                     else index++; //Skip that element
