--- a/src/nhap/lknhap.html
+++ b/src/nhap/lknhap.html
@@ -17,6 +17,8 @@
         rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="https://kraaden.github.io/autocomplete/autocomplete.css">
     <title>Data Manager</title>
+
+    
 </head>
 <body>
 
@@ -37,9 +39,10 @@
         </div>
 
     </nav>
-    <div class="container">
+    <div class="container" style="position: relative; padding: 0 !important;">
         <h1 style="margin-top: 50px;">Nhập linh kiện thành phẩm <span style="font-size: 15px; float: right; margin-top: 15px;">Ngày thực nhập : 01/09/2018</span></h1>
-        <form id="save" action="" class="form-group" onsubmit="return process()">
+        <p class="clearfix" style="font-size: 15px; right: 0; margin-top: 5px;position: absolute;">Hợp đồng số : 555</p>
+        <form style="margin-top: 15px;" id="save" action="" class="form-group" onsubmit="return process()">
 
             <div class="row">
                 <input type="hidden" id="submissionDate" value="not added yet">
